refactor: Customer 불변 객체로 변경